added separate abstracts, corrected spelling in the Czech version
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5414 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/summary.tex
+++ b/2010/thesis/summary.tex
@@ -26,7 +26,7 @@
 \def\linkColor{\cmykBlue}
 
 % for print version
-\def\linkColor{\cmykBlack}
+%\def\linkColor{\cmykBlack}
 
 
 %----------------------------------------------------------------------------------------------------
