--- a/2010/thesis/publications.tex
+++ b/2010/thesis/publications.tex
@@ -1,50 +1,58 @@
-\input base
-\input article
+\def\yes{yes}
 
-\centerline{\bf List of publications by Jan Ka\v spar}
+\input utf8-csf
 
-\vskip2\baselineskip
+\ifx\InSummary\yes
+\else
+	\input base
+	\input article
+
+	\centerline{\bf List of Publications by Jan Ka\v spar}
+	\vskip2\baselineskip
+\fi
+
+\itskip5pt
 
 \noindent Selected publications of the TOTEM experiment (I am a coauthor of more than 20 publications)
 
-\> TOTEM Collaboration (G. Antchev et al.), First measurement of the total proton-proton cross-section at the LHC energy of  $\sqrt s = 7\un{TeV}$, Europhys. Lett. 96 (2011) 21002.
+\> ANTCHEV, G. et al. (TOTEM collaboration). {\it First measurement of the total proton-proton cross-section at the LHC energy of $\sqrt s = 7\,TeV$}. Europhys. Lett. 96 (2011) 21002.
 
-\> TOTEM Collaboration (G. Antchev et al.), Proton-proton elastic scattering at the LHC energy of  $\sqrt s = 7\un{TeV}$, Europhys. Lett. 95 (2011) 41001.
+\> ANTCHEV, G. et al. (TOTEM collaboration). {\it Proton-proton elastic scattering at the LHC energy of $\sqrt s = 7\,TeV$}. Europhys. Lett. 95 (2011) 41001.
 
-\> Jan Ka\v spar on behalf of the TOTEM collaboration, TOTEM Experiment: Elastic and Total Cross Sections, prepared for 13th International Conference on Elastic and Diffractive Scattering, CERN, Geneva, Switzerland, 29th June - 3rd July 2009, e-print: arXiv:1002.3527.
+\> KAŠPAR, J. (TOTEM collaboration). {\it TOTEM Experiment: Elastic and Total Cross Sections}. Presented at 13th International Conference on Elastic and Diffractive Scattering, CERN, Geneva, Switzerland, 29th June - 3rd July 2009. E-print: arXiv:1002.3527.
 
-\> Jan Ka\v spar on behalf of the TOTEM collaboration, First results of the TOTEM Roman Pots, prepared for Vertex 2010: 19th International Workshop on Vertex Detectors, Loch Lomond, Glasgow, Scotland, United Kingdom, 6-11 Jun 2010, published in PoS.
+\> KAŠPAR, J. (TOTEM collaboration). {\it First results of the TOTEM Roman Pots}. Presented at Vertex 2010: 19th International Workshop on Vertex Detectors, Loch Lomond, Glasgow, Scotland, United Kingdom, 6-11 Jun 2010. Published in PoS.
 
-\> Jan Ka\v spar on behalf of the TOTEM collaboration, Soft physics at the LHC with TOTEM, prepared for 23th Les Rencontres de Physique de La Vallee d'Aoste, La Thuile, Aosta Valley, Italy, 1-7 Mar 2009, published in Nuovo Cim. C32 (2009) 105-112.
+\> KAŠPAR, J. (TOTEM collaboration). {\it Soft physics at the LHC with TOTEM}. Presented at 23th Les Rencontres de Physique de La Vallee d'Aoste, La Thuile, Aosta Valley, Italy, 1-7 Mar 2009. Published in Nuovo Cim. C32 (2009) 105-112.
 
-\> TOTEM Collaboration (G. Anelli et al.), The TOTEM experiment at the CERN Large Hadron Collider, JINST 3 (2008).
+\> ANELLI, G. et al. (TOTEM collaboration). {\it The TOTEM experiment at the CERN Large Hadron Collider}. JINST 3 (2008).
 
 
-\vskip\baselineskip
+\vskip2\baselineskip
 \noindent Other publications
 
-%------ Kundrat et al. -------
+%------ Kundrát et al. -------
 
-\> Kaspar, J., Kundrat V., Lokajicek M. and Prochazka J., Phenomenological models of elastic nucleon scattering and predictions for LHC, Nucl. Phys. B843 (2011) 84-106.
+\> KAŠPAR, J., KUNDRÁT, V., LOKAJÍČEK, M. and PROCHÁZKA, J. {\it Phenomenological models of elastic nucleon scattering and predictions for LHC}. Nucl. Phys. B843 (2011) 84-106.
 
-\> Kundrat, V., Lokajicek M., Kaspar J. and Prochazka J., Problems of phenomenological description of elastic pp scattering at the LHC: Predictions of contemporary models, Prepared for Forward Physics at LHC, La Biodola, Isola d'Elba, Italy, 27-29 May 2010, published in La Biodola 2010, Forward physics at the LHC 26-35.
+\> KUNDRÁT, V., LOKAJÍČEK, M., KAŠPAR, J. and PROCHÁZKA, J. {\it Problems of phenomenological description of elastic pp scattering at the LHC: Predictions of contemporary models}. Presented at Physics at LHC, La Biodola, Isola d'Elba, Italy, 27-29 May 2010. Published in La Biodola 2010, Forward physics at the LHC 26-35.
 
-\> Kaspar J., Kundrat V. and Lokajicek M., Contemporary models of elastic nucleon scattering and their predictions for LHC, e-print: arXiv:0912.0112 (2009).
+\> KAŠPAR, J., KUNDRÁT, V. and LOKAJÍČEK, M. {\it Contemporary models of elastic nucleon scattering and their predictions for LHC}. E-print: arXiv:0912.0112 (2009).
 
-\> Kundrat V., Kaspar J. and Lokajicek M., Theoretical aspects of high energy elastic nucleon scattering, e-print: arXiv:0912.1188 (2009).
+\> KUNDRÁT, V., KAŠPAR, J. and LOKAJÍČEK, M. {\it Theoretical aspects of high energy elastic nucleon scattering}. E-print: arXiv:0912.1188 (2009).
 
-\> Kundrat V., Kaspar J. and Lokajicek M., To the theory of high-energy elastic nucleon collisions, e-print: arXiv:0712.1503 (2007).
+\> KUNDRÁT, V., KAŠPAR, J. and LOKAJÍČEK, M. {\it To the theory of high-energy elastic nucleon collisions}. E-print: arXiv:0712.1503 (2007).
 
-\> Kundrat V., Kaspar J. and Lokajicek M., To the theory of high-energy elastic nucleon collisions, prepared for 12th International Conference on Elastic and diffractive scattering, Hamburg, Germany, May 21-25, 2007, e-print: arXiv:0712.3633.
+\> KUNDRÁT, V., KAŠPAR, J. and LOKAJÍČEK, M. {\it To the theory of high-energy elastic nucleon collisions}. Presented at 12th International Conference on Elastic and diffractive scattering, Hamburg, Germany, May 21-25, 2007. E-print: arXiv:0712.3633.
 
 %------- ISLAM -------
 
-\> Islam, M. M., Kaspar J. and Luddy R. J., Deep-elastic pp scattering at LHC from low-x gluons, Mod. Phys. Lett. A24 (2009) 485-496.
+\> ISLAM, M. M., KAŠPAR, J. and LUDDY, R. J. {\it Deep-elastic pp scattering at LHC from low-x gluons}. Mod. Phys. Lett. A24 (2009) 485-496.
 
-\> Islam, M. M., Luddy R., Kaspar J. and Prokudin A., Picturing the proton by elastic scattering, CERN Cour. 49 (2009) 35-37.
+\> ISLAM, M. M., LUDDY, R. J., KAŠPAR, J. and PROKUDIN, A. {\it Picturing the proton by elastic scattering}. CERN Cour. 49 (2009) 35-37.
 	
-\> Islam, M. M., Kaspar J. and Luddy R. J., Proton-Proton Elastic Scattering at LHC and Proton Structure, 13th International Conference on Elastic and Diffractive Scattering, CERN, Geneva, Switzerland, 29 Jun - 03 Jul 2009.
+\> ISLAM, M. M., KAŠPAR, J. and LUDDY, R. J. {\it Proton-Proton Elastic Scattering at LHC and Proton Structure}. Presented at 13th International Conference on Elastic and Diffractive Scattering, CERN, Geneva, Switzerland, 29 Jun - 03 Jul 2009.
 
-\> Islam, M. M., Kaspar J. and Luddy R. J., pp Elastic Scattering at LHC in a Nucleon-Structure Model, proceedings of 12th International Conference on Elastic and Diffractive Scattering, Hamburg, DESY, Germany, 21-25 May 2007.
+\> ISLAM, M. M., KAŠPAR, J. and LUDDY, R. J. {\it pp Elastic Scattering at LHC in a Nucleon-Structure Model}. Presented at 12th International Conference on Elastic and Diffractive Scattering, Hamburg, DESY, Germany, 21-25 May 2007.
 
 \bye
