added oponents and list of publications
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5455 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/summary.tex
+++ b/2010/thesis/summary.tex
@@ -26,7 +26,7 @@
 \def\linkColor{\cmykBlue}
 
 % for print version
-%\def\linkColor{\cmykBlack}
+\def\linkColor{\cmykBlack}
 
 
 %----------------------------------------------------------------------------------------------------
@@ -192,7 +192,7 @@
 \pdfdest name {AnnouncementPage} xyz
 \pdfoutline goto name {AnnouncementPage} count 0 {Announcement page}%
 
-Tato disertační práce byla vypracována v rámci doktorandského studia, které uchazeč absolvoval na Fyzikálním ústavu Akademie věd ČR, v.~v.~i., v letech 2005-2011.
+Tato disertační práce byla vypracována v rámci doktorského studia, které uchazeč absolvoval na Fyzikálním ústavu Akademie věd ČR, v.~v.~i., v letech 2005-2011.
 
 \vfil
 
@@ -208,18 +208,18 @@ Oponenti:			& Mgr. Alexander Kupčo, Ph.D.\cr
 					& Fyzikální ústav Akademie věd ČR, v.~v.~i.\cr
 					& Na Slovance 1999/2, 182 21 Praha 8\cr
 &\cr
-					& prof. RNDr. Michal Suk, DrSc.\cr
-					& Vědecká rada MFF UK\cr
+					& RNDr. Alice Valkárová, DrSc.\cr
+					& Ústav částicové a jaderné fyziky\cr
 					& V Holešovičkách 2, 180 00 Praha 8\cr
 }
 
 \vfil
 
-Autoreferát byl rozeslán dne ??. ??. ????
+Autoreferát byl rozeslán dne \quad\quad \quad\quad \quad\quad\quad\quad
 
 \vfil
 
-Obhajoba disertační práce se koná dne ??. ??. ???? v ?? hodin před komisí pro obhajoby disertačních prací v oboru F9 na Ústavu částicové a jaderné fyziky, V Holešovičkách 2, 180 00 Praha 8, v místnosti ????
+Obhajoba disertační práce se koná dne \quad\quad \quad\quad \quad\quad\quad\quad v \quad\quad\quad hodin před komisí pro obhajoby disertačních prací v oboru F9 na Ústavu částicové a jaderné fyziky, V Holešovičkách 2, 180 00 Praha 8, v místnosti 945.
 
 \vfil
 
@@ -477,5 +477,12 @@ The final cross-section result, compared to the predictions of the models from \
 \PrintReferences
 
 \EndText
+
+%----------------------------------------------------------------------------------------------------
+
+\def\InSummary{yes}
+
+\SpecialChapter{List of Publications}
+\input publications
 
 \end
