--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -32,7 +32,7 @@
 \def\linkColor{\cmykBlue}
 
 % for print version
-%\def\linkColor{\cmykBlack}
+\def\linkColor{\cmykBlack}
 
 \def\pmt#1{{\tt #1}}
 
@@ -114,7 +114,9 @@ I understand that my work relates to the rights and obligations under the Act No
 
 \vskip2\baselineskip
 
-In Geneva, 25 November, 2011
+%In Geneva, 25 November, 2011 (submitted version)
+%In Geneva, 8 December, 2011 (1st corrected version)
+In Geneva, 8 February, 2012 (2nd corrected version)
 
 \vskip2\baselineskip
 \line{\hss Jan Ka\v spar}
