old figure label corrected
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5477 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -47,7 +47,9 @@ Let us comment on the vertex terms (see \Eq{ttm lin par}) that might seem to be 
 \section[felm bckg]{Background}
 
 \kern-5mm
-\fig{fig/pdf/felm_cuts.pdf}{felm cuts}{The selection cuts (for the diagonal 45 bottom -- 56 top). The color scale follows logarithmically the bin contents in the order: white, blue, green, red and black.}
+\fig{fig/pdf/felm_cuts.pdf}{felm cuts}{The selection cuts (for the diagonal 45 bottom -- 56 top).
+%The color scale follows logarithmically the bin contents in the order: white, blue, green, red and black.
+}
 
 The elastic-event-selection cuts for the final analysis have evolved compared to those used in \Sc{al elast}. At the end six cuts have been used, as shown in \Fg{felm cuts}. They are qualitatively similar to those presented in \Fg{al el selection}. The cut condition could be written as
 \eqref{|q_i| < 3 \si_i\ ,}{felm cut}
