--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -1,5 +1,3 @@
-\input base
-\input colors
 \input biblio
 \input book
 
@@ -25,6 +23,8 @@
 %	\def\FootText{(VERSION 15)}
 %\fi
 
+\ShowLabelstrue
+
 % this leads to 2cm margins at top, bottom and outer edges, 3cm margins at the inner edge
 \pageamp=5mm
 
@@ -32,7 +32,7 @@
 \def\linkColor{\cmykBlue}
 
 % for print version
-\def\linkColor{\cmykBlack}
+%\def\linkColor{\cmykBlack}
 
 \def\pmt#1{{\tt #1}}
 
@@ -49,7 +49,7 @@
 \vskip2	cm
 \centerline{\fPbxx Doctoral Thesis}
 \vskip1cm
-\centerline{\IncludeSizedGraphics{5cm}{fig/mffLogo.pdf}}
+\centerline{\IncludeSizedGraphics{5cm}{fig/logo_mff.pdf}}
 %\vskip5cm
 \vskip3cm
 \centerline{\fPbxiv Jan Ka\v spar}
